--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -23,6 +23,13 @@ parts:
       - libpopt-dev
     organize:
       usr/lib64: usr/lib/x86_64-linux-gnu
+  #adjust the paths from libefivar
+  libefivar-fixpkgconfig:
+    plugin: make
+    source: libefivar-fixpkgconfig
+    make-parameters:
+      - SNAPCRAFT_STAGE=$SNAPCRAFT_STAGE
+    after: [libefivar-dev]
   libfwup-dev:
     plugin: make
     source: https://github.com/rhboot/fwupdate.git
@@ -42,13 +49,18 @@ parts:
       - libefivar-dev
       - libsmbios-dev
       - libsmbios2v5
-    after: [libefivar-dev]
+    after: [libefivar-fixpkgconfig]
   appstream-glib-dev:
     plugin: meson
-    meson-parameters: [--prefix=/usr, -Dgtkdoc=false]
+    meson-parameters: [--prefix=/usr, -Dgtk-doc=false, -Dintrospection=false, -Dman=false, -Drpm=false]
+    #hack for lack of new enough meson (https://bugs.launchpad.net/snapcraft/+bug/1753250)
+    prepare: |
+      apt-get install -y python-setuptools
+      pip3 install meson
     source: https://github.com/hughsie/appstream-glib
     source-type: git
     build-packages:
+      - python3-pip
       - intltool
       - libarchive-dev
       - libgcab-dev
@@ -63,6 +75,22 @@ parts:
       - uuid-dev
       - xmlto
     after: [libfwup-dev]
+  libsmbios:
+    plugin: autotools
+    source: https://github.com/dell/libsmbios
+    source-type: git
+    build-packages:
+      - doxygen
+      - graphviz
+      - python3
+      - libxml2-dev
+      - pkg-config
+      - autoconf
+      - automake
+      - libtool
+      - help2man
+      - autopoint
+    after: [appstream-glib-dev]
   fwupd:
     plugin: meson
     meson-parameters: [--prefix=/usr, --libexecdir=/usr/lib, -Dgtkdoc=false, -Dsnap=true]
@@ -97,7 +125,6 @@ parts:
       - libgusb-dev
       - libjson-glib-dev
       - libpolkit-gobject-1-dev
-      - libsmbios-dev
       - libsoup2.4-dev
       - libsqlite3-dev
       - libtool-bin
@@ -156,6 +183,7 @@ parts:
       - -usr/share/polkit-1
       - -usr/share/vala
       - -usr/share/doc
+    after: [libsmbios]
   fwupdtool-wrapper:
     plugin: dump
     source: .
