--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -106,6 +106,15 @@ parts:
       - -usr/share/aclocal
       - -usr/lib/*/pkgconfig
       - -usr/share/installed-tests
+      - -usr/lib/systemd
+      - -usr/lib/glib-networking
+      - -usr/lib/dconf
+      - -usr/share/X11
+      - -usr/share/GConf
+      - -usr/share/dbus-1
+      - -usr/share/glib-2.0/schemas
+      - -usr/share/lintian
+      - -usr/share/man
     after: [libfwup-dev]
   libsmbios:
     plugin: autotools
@@ -213,7 +222,6 @@ parts:
       - -usr/share/info
       - -usr/share/gir-1.0
       - -usr/share/upstart
-      - -usr/lib/*/gio
       - -usr/lib/*/glib-2.0
       - -usr/lib/*/pkgconfig
     after: [libsmbios]
